--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "version": "2.0.0",
   "private": true,
   "author": {
-    "name": "Hashir Shoaib",
-    "email": "hashirshoaeb@gmail.com",
+    "name": "Aman Kumar",
+    "email": "amankumarsuman.ssjha143@gmail.com",
     "url": "https://github.com/amankumarsuman"
   },
   "dependencies": {
